(GUI) Aggiunti indicatore filtri attivi. Diminuiti il numero di test case, uniti quelli piccoli e resi più corposi